add file-storage service

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:communication": "pnpm run --filter @onecore/communication build ",
     "build:core": "pnpm run --filter @onecore/core build ",
     "build:economy": "pnpm run --filter @onecore/economy build",
+    "build:file-storage": "pnpm run --filter @onecore/file-storage build",
     "build:internal-portal": "pnpm run --filter @onecore/internal-portal build && pnpm run build:internal-portal-backend",
     "build:internal-portal-backend": "pnpm run --filter @onecore/internal-portal-backend  build ",
     "build:leasing": "pnpm run --filter @onecore/leasing build ",
@@ -20,7 +21,7 @@
     "build:property": "pnpm run --filter @onecore/property build ",
     "build:property-management": "pnpm run --filter @onecore/property-management build",
     "build:property-tree": "pnpm run build --filter @onecore/property-tree",
-    "build:services": "pnpm run build:leasing && pnpm run build:economy && pnpm run build:property-management && pnpm run build:communication && pnpm run build:work-order && pnpm run build:property",
+    "build:services": "pnpm run build:leasing && pnpm run build:economy && pnpm run build:property-management && pnpm run build:communication && pnpm run build:work-order && pnpm run build:property && pnpm run build:file-storage",
     "build:types": "pnpm run --filter @onecore/types build",
     "build:utilities": "pnpm run --filter @onecore/utilities build",
     "build:work-order": "pnpm run --filter @onecore/work-order build",
