ContactRepository and query builder for xpand contacts

--- a/services/contacts/package.json
+++ b/services/contacts/package.json
@@ -17,7 +17,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "NODE_ENV=production node --import tsx --watch src/index",
+    "dev": "NODE_ENV=production node -r dotenv/config --import tsx --watch src/index",
     "dev:init": "pnpm prepare:dotenv",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
@@ -26,6 +26,7 @@
     "script:expire-listings": "ts-node src/scripts/expire-listings.ts",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
     "test": "pnpm test:create-db && DOTENV_CONFIG_PATH=.env.test jest",
+    "test:create-db": "./scripts/create-test-db.sh",
     "test:ci": "DOTENV_CONFIG_PATH=.env.ci jest",
     "test:watch": "DOTENV_CONFIG_PATH=.env.test jest --watch",
     "ts:watch": "tsc --watch --noEmit",
@@ -52,8 +53,8 @@
     "koa": "^2.16.2",
     "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.4.1",
+    "koa-okapi-router": "^0.1.2",
     "koa-pino-logger": "^4.0.0",
-    "koa-okapi-router": "^0.1.1",
     "koa2-swagger-ui": "^5.11.0",
     "mssql": "^11.0.1",
     "personnummer": "^3.2.1",
@@ -75,16 +76,17 @@
     "@eslint/js": "9.32.0",
     "@types/apidoc": "^0.50.3",
     "@types/easy-soap-request": "^5.6.0",
+    "@types/http-errors": "^2.0.0",
     "@types/jest": "^29.5.14",
     "@types/koa": "^2.15.0",
-    "@types/koa__cors": "^5.0.0",
-    "@types/koa__router": "12.0.4",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-pino-logger": "3.0.4",
+    "@types/koa__cors": "^5.0.0",
+    "@types/koa__router": "12.0.4",
+    "@types/mssql": "^9.1.8",
     "@types/node": "^20.11.5",
     "@types/pino-multi-stream": "^5.1.6",
     "@types/supertest": "^6.0.2",
-    "@types/http-errors": "^2.0.0",
     "@typescript-eslint/typescript-estree": "^8.6.0",
     "eslint": "^9.31.0",
     "globals": "^15.9.0",
@@ -92,9 +94,9 @@
     "nodemon": "^3.1.7",
     "prettier": "^3.6.2",
     "supertest": "^7.0.0",
-    "tsx": "^4.19.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.2"
   }
 }
