--- a/services/contacts/tsconfig.json
+++ b/services/contacts/tsconfig.json
@@ -10,7 +10,8 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["./src/*"]
+      "@src/*": ["./src/*"],
+      "@xpand/*": ["./src/adapters/xpand/*"]
     }
   },
   "include": ["scripts/", "src/", "test/"]
