--- a/services/property/package.json
+++ b/services/property/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
+    "fishery": "^2.4.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.6.2",
