--- a/services/property/package.json
+++ b/services/property/package.json
@@ -51,7 +51,8 @@
     "tsx": "^4.19.2",
     "zod": "^3.25.67",
     "zod-prisma-types": "^3.2.1",
-    "zod-to-json-schema": "^3.24.5"
+    "zod-to-json-schema": "^3.24.5",
+    "fishery": "^2.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -63,7 +64,6 @@
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
-    "fishery": "^2.4.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.6.2",
