--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:internal-portal-backend": "pnpm run --filter @onecore/internal-portal-backend  build ",
     "build:keys": "turbo run --filter @onecore/keys build",
     "build:leasing": "pnpm run --filter @onecore/leasing build ",
-    "build:libs": "pnpm run build:types && pnpm run build:utilities",
+    "build:libs": "pnpm run build:types && pnpm run build:utilities && pnpm run build:dax-client",
+    "build:dax-client": "pnpm run --filter dax-client build",
     "build:property": "pnpm run --filter @onecore/property build ",
     "build:property-management": "pnpm run --filter @onecore/property-management build",
     "build:property-tree": "pnpm run build --filter @onecore/property-tree",
