change to adding the pem key via .env instead of as a file, to simplfy handling of kubeseal

--- a/services/keys/.env.template
+++ b/services/keys/.env.template
@@ -23,7 +23,7 @@ ALLIERA__API_URL=
 ALLIERA__USERNAME=
 ALLIERA__PASSWORD=
 ALLIERA__CLIENT_ID=
-ALLIERA__PEM_KEY_PATH=
+ALLIERA__PEM_KEY=
 ALLIERA__PARTNER_ID=
 ALLIERA__OWNING_INSTANCE_ID=
 
