--- a/services/leasing/.env.ci
+++ b/services/leasing/.env.ci
@@ -3,3 +3,6 @@ LEASING_DATABASE__HOST=localhost
 LEASING_DATABASE__USER=sa
 LEASING_DATABASE__PORT=1433
 LEASING_DATABASE__DATABASE=tenants-leases-test
+
+TENFAST__LEASE_RENT_ROWS__HOME_INSURANCE_ARTICLE_ID=test
+TENFAST__LEASE_RENT_ROWS__HOME_INSURANCE_AMOUNT=0
