--- a/services/leasing/.env.template
+++ b/services/leasing/.env.template
@@ -25,3 +25,5 @@ APPLICATION_NAME=leasing
 TENFAST__API_KEY=
 TENFAST__BASE_URL=https://tenfast-test-api.mimer.nu
 TENFAST__COMPANY_ID=
+TENFAST__LEASE_RENT_ROWS__HOME_INSURANCE_ARTICLE_ID=test
+TENFAST__LEASE_RENT_ROWS__HOME_INSURANCE_AMOUNT=0
