--- a/services/leasing/.env.test
+++ b/services/leasing/.env.test
@@ -7,3 +7,5 @@ LEASING_DATABASE__DATABASE=tenants-leases-test
 TENFAST__BASE_URL=https://tenfast.example.com
 TENFAST__API_KEY=test
 TENFAST__COMPANY_ID=test
+TENFAST__LEASE_RENT_ROWS__HOME_INSURANCE__ARTICLE_ID=test
+TENFAST__LEASE_RENT_ROWS__HOME_INSURANCE__AMOUNT=test
