--- a/libs/utilities/package.json
+++ b/libs/utilities/package.json
@@ -38,7 +38,8 @@
   },
   "peerDependencies": {
     "@elastic/transport": "^8.0.0",
-    "@elastic/elasticsearch": "^8.0.0"
+    "@elastic/elasticsearch": "^8.0.0",
+    "knex": "^3.1.0"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -54,6 +55,7 @@
     "@eslint/js": "9.32.0",
     "@types/jest": "^29.5.14",
     "@types/koa": "^2.15.0",
+    "knex": "^3.1.0",
     "@types/pino-multi-stream": "^5.1.6",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
