--- a/services/economy/package.json
+++ b/services/economy/package.json
@@ -90,6 +90,7 @@
     "ssh2-sftp-client": "^12.0.1",
     "swagger-jsdoc": "^6.2.8",
     "tedious": "^18.6.1",
+    "ts-pattern": "^5.8.0",
     "tsc-alias": "^1.8.16",
     "zod": "^3.25.76"
   }
