Feature/mim 959 fa lyckade calls till api fran onecore repo (#271)
* försöker få kontakt via onecore till amido

* debugging

* .dlls direkt i onecore, kör linux runnable executables, utan dotnet installed

* cardownwers

* dax adapers

* update to get working search endpoint. removed temporary test. simplified adapters

* core proxy

* test adapter after meeting

* functioning with test and witho regular

* cahnging to the test adapter

* remove logging from ordinary operations

* removes the CLI version

* remove testfile

* standalone lib (to be published in its own repo)

* crlf - lf

* changes in adapters  to use the lib version

* adding card endpoint

* core adapters

* Enhance DAX API: Update card owners endpoint to include additional query parameters and improve response schemas

* adding carddetail schema, adding keycards to keyloan schema + running new generate types

* routes and adapters

* basic frotnend addition, showing the cards on an object on the keyloan page

* core functions for keycards in forntend to handle loans and returns as well as displaying the keycards  ann a    * /key-loans/by-card/{cardId}: endpoint

* sends card owner id onward to front end. may want toi refactor to send the entire object, and with less overhead, however this wors for all current use cases

* adding cards to receipts

* refactor to simplify the intermediate dax-adapter. also adds the instance and client id to to the client directly emaning we dont ahve to pass it in each function call

* remove old test

* test error and lint fixes

* reset to 678, unnecessary change

* add building the dax-client to the build script

* trying to make it build the client

* change to adding the pem key via .env instead of as a file, to simplfy handling of kubeseal

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:internal-portal-backend": "pnpm run --filter @onecore/internal-portal-backend  build ",
     "build:keys": "turbo run --filter @onecore/keys build",
     "build:leasing": "pnpm run --filter @onecore/leasing build ",
-    "build:libs": "pnpm run build:types && pnpm run build:utilities",
+    "build:libs": "pnpm run build:types && pnpm run build:utilities && pnpm run build:dax-client",
+    "build:dax-client": "pnpm run --filter dax-client build",
     "build:property": "pnpm run --filter @onecore/property build ",
     "build:property-management": "pnpm run --filter @onecore/property-management build",
     "build:property-tree": "pnpm run build --filter @onecore/property-tree",
@@ -26,7 +27,7 @@
     "build:utilities": "pnpm run --filter @onecore/utilities build",
     "build:work-order": "pnpm run --filter @onecore/work-order build",
     "db:init": "sh ./scripts/db/initialize.sh",
-    "dev:init": "pnpm run git:configure && pnpm run db:init && pnpm -r dev:init",
+    "dev:init": "git submodule update --init --recursive && pnpm run git:configure && pnpm run db:init && pnpm -r dev:init",
     "dev": "turbo run dev",
     "dev:pick": "pnpx launch-goblin",
     "dev:gb": "cross-env TURBO_UI=false turbo run dev --filter=\"!@onecore/economy\" --no-daemon",
