--- a/apps/property-tree/package.json
+++ b/apps/property-tree/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
@@ -48,11 +49,13 @@
     "date-fns": "^3.6.0",
     "deck.gl": "^9.0.38",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.0.8",
     "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.462.0",
     "maplibre-gl": "5.7.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-map-gl": "^8.0.0",
