--- a/services/contacts/package.json
+++ b/services/contacts/package.json
@@ -16,7 +16,7 @@
   },
   "main": "./src/index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -P tsconfig.build.json",
     "dev": "NODE_ENV=production node -r dotenv/config --import tsx --watch src/index",
     "dev:init": "pnpm prepare:dotenv",
     "lint": "eslint src/",
@@ -25,7 +25,7 @@
     "prettier": "prettier --check ./src",
     "script:expire-listings": "ts-node src/scripts/expire-listings.ts",
     "start": "pnpm migrate:up && node -r dotenv/config build/index",
-    "test": "pnpm test:create-db && DOTENV_CONFIG_PATH=.env.test jest",
+    "test": "pnpm test:create-db && DOTENV_CONFIG_PATH=.env.test jest --detectOpenHandles",
     "test:create-db": "./scripts/create-test-db.sh",
     "test:ci": "DOTENV_CONFIG_PATH=.env.ci jest",
     "test:watch": "DOTENV_CONFIG_PATH=.env.test jest --watch",
@@ -53,7 +53,7 @@
     "koa": "^2.16.2",
     "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.4.1",
-    "koa-okapi-router": "^0.1.2",
+    "koa-okapi-router": "^0.1.3",
     "koa-pino-logger": "^4.0.0",
     "koa2-swagger-ui": "^5.11.0",
     "mssql": "^11.0.1",
@@ -96,6 +96,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.2"
   }
