testing with extra pnpm i after building libs

--- a/apps/internal-portal/backend/Dockerfile
+++ b/apps/internal-portal/backend/Dockerfile
@@ -20,6 +20,7 @@ COPY apps/internal-portal/backend ./apps/internal-portal/backend
 
 RUN pnpm install
 RUN pnpm build:libs
+RUN pnpm install
 RUN pnpm run --filter @onecore/internal-portal-backend build
 RUN pnpm install --only=prod
 RUN pnpm deploy --filter @onecore/internal-portal-backend --prod /out
