--- a/services/communication/Dockerfile
+++ b/services/communication/Dockerfile
@@ -20,6 +20,7 @@ COPY services/communication ./services/communication
 
 RUN pnpm install
 RUN pnpm build:libs
+RUN pnpm install
 RUN pnpm run --filter @onecore/communication build
 RUN pnpm install --only=prod
 RUN pnpm deploy --filter @onecore/communication --prod /out
