--- a/services/file-storage/Dockerfile
+++ b/services/file-storage/Dockerfile
@@ -20,6 +20,7 @@ COPY services/file-storage ./services/file-storage
 
 RUN pnpm install
 RUN pnpm build:libs
+RUN pnpm install
 RUN pnpm run --filter @onecore/file-storage build
 RUN pnpm install --only=prod
 RUN pnpm deploy --filter @onecore/file-storage --prod /out
