--- a/services/leasing/Dockerfile
+++ b/services/leasing/Dockerfile
@@ -20,6 +20,7 @@ COPY services/leasing ./services/leasing
 
 RUN pnpm install
 RUN pnpm build:libs
+RUN pnpm install
 RUN pnpm run --filter @onecore/leasing build
 RUN pnpm install --only=prod
 RUN pnpm deploy --filter @onecore/leasing --prod /out
