--- a/services/work-order/Dockerfile
+++ b/services/work-order/Dockerfile
@@ -20,6 +20,7 @@ COPY services/work-order ./services/work-order
 
 RUN pnpm install
 RUN pnpm build:libs
+RUN pnpm install
 RUN pnpm run --filter @onecore/work-order build
 RUN pnpm install --only=prod
 RUN pnpm deploy --filter @onecore/work-order --prod /out
