--- a/libs/utilities/package.json
+++ b/libs/utilities/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@onecore/utilities",
   "version": "1.5.0",
-  "type": "commonjs",
+  "type": "module",
   "description": "ONECore common utilities",
   "license": "AGPL-3.0-only",
   "homepage": "https://github.com/Bostads-AB-Mimer/onecore-utilities#readme",
@@ -13,22 +13,16 @@
     "url": "https://github.com/Bostads-AB-Mimer/onecore-utilities/issues"
   },
   "author": "Anders Norrback Bornholm",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
-      "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
-      },
-      "require": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      }
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js"
     }
   },
   "scripts": {
@@ -43,8 +37,8 @@
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@elastic/transport": "^8.0.0",
     "@elastic/elasticsearch": "^8.0.0",
+    "@elastic/transport": "^8.0.0",
     "knex": "^3.1.0"
   },
   "dependencies": {
@@ -61,7 +55,6 @@
     "@eslint/js": "9.32.0",
     "@types/jest": "^29.5.14",
     "@types/koa": "^2.15.0",
-    "knex": "^3.1.0",
     "@types/pino-multi-stream": "^5.1.6",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
@@ -70,6 +63,7 @@
     "eslint-plugin-n": "17.21.3",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
+    "knex": "^3.1.0",
     "prettier": "^3.6.2",
     "ts-jest": "^29.2.5",
     "tsup": "^8.0.2",
