--- a/libs/utilities/tsconfig.json
+++ b/libs/utilities/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2016",
-    "declaration": true,
-    "outDir": "dist"
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "rootDirs": ["./src", "./test"],
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
+  "include": ["src/**/*.ts", "test/**/*.ts"],
   "exclude": [
     "dist"
   ]
