--- a/services/contacts/tsconfig.build.json
+++ b/services/contacts/tsconfig.build.json
@@ -7,7 +7,8 @@
     "outDir": "./build",
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["./src/*"]
+      "@src/*": ["./src/*"],
+      "@xpand/*": ["./src/adapters/xpand/*"]
     }
   },
   "include": ["./src"]
