--- a/core/package.json
+++ b/core/package.json
@@ -8,7 +8,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon -e ts,js --exec pnpm start",
+    "dev": "tsx watch src/index.ts",
     "dev:init": "pnpm run prepare:dotenv",
     "generate-types": "pnpm generate-types:property-base & pnpm generate-types:work-order & pnpm generate-types:keys",
     "generate-types:keys": "npx openapi-typescript http://localhost:5090/swagger.json -o ./src/adapters/keys-adapter/generated/api-types.ts",
@@ -22,7 +22,7 @@
     "dev:script:start-offer-batches": "ts-node src/scripts/start-offer-batches.ts",
     "script:handle-expired-offers": "node build/scripts/handle-expired-offers",
     "script:start-offer-batches": "node build/scripts/start-offer-batches",
-    "start": "ts-node ./src/index.ts",
+    "start": "node build/index.js",
     "test": "jest",
     "test:ci": "TZ=UTC jest --silent",
     "test:watch": "TZ=UTC jest --watch",
@@ -33,6 +33,7 @@
     "@iteam/config": "^12.1.2",
     "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.1",
+    "@onecore/contacts": "workspace:*",
     "@onecore/types": "workspace:*",
     "@onecore/utilities": "workspace:*",
     "@types/lodash": "^4.17.13",
@@ -50,7 +51,7 @@
     "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.4.1",
     "koa-jwt": "^4.0.4",
-    "koa-okapi-router": "^0.1.2",
+    "koa-okapi-router": "^0.1.3",
     "koa-pino-logger": "^4.0.0",
     "koa2-swagger-ui": "^5.11.0",
     "lodash": "^4.17.21",
@@ -94,6 +95,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.6.2",
     "typescript-eslint": "8.42.0"
   }
