--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
+    "module": "preserve",
+    "moduleResolution": "bundler",
     "rootDirs": [
       "./src",
       "./test"
