--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -15,12 +15,12 @@ COPY package.json tsconfig*.json pnpm-lock.yaml pnpm-workspace.yaml ./
 # Copy relevant packages
 COPY libs/types ./libs/types
 COPY libs/utilities ./libs/utilities
+COPY services/contacts ./services/contacts
 COPY core ./core
 
 RUN pnpm install
 RUN pnpm build:libs
-RUN pnpm install
-RUN pnpm run --filter @onecore/core build
+RUN pnpm run --filter @onecore/contacts --filter @onecore/core build
 RUN pnpm install --only=prod
 RUN pnpm deploy --filter @onecore/core --prod /out
 
@@ -34,4 +34,4 @@ COPY --from=builder /out ./
 ENV PORT=80
 EXPOSE 80
 
-CMD ["node", "build/src/index.js"]
+CMD ["node", "build/index.js"]
