--- a/core/package.json
+++ b/core/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "main": "./src/index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "dev": "tsx watch src/index.ts",
     "dev:init": "pnpm run prepare:dotenv",
     "generate-types": "pnpm generate-types:property-base & pnpm generate-types:work-order & pnpm generate-types:keys",
@@ -95,6 +95,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.5",
     "typescript": "^5.6.2",
     "typescript-eslint": "8.42.0"
