--- a/services/contacts/tsconfig.json
+++ b/services/contacts/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "noEmit": true,
-    "composite": true,
+
+    "module": "preserve",
+    "moduleResolution": "bundler",
+
     "rootDirs": ["./src", "./test", "./scripts"],
     "types": [
       "jest",
