ci: Make sure packages build with dependencies (but not the pre-built libs)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -132,7 +132,10 @@ jobs:
           run-generate-static: ${{ matrix.runGenerateStatic }}
 
       - name: Build
-        run: pnpm run --filter ${{ matrix.package }} build
+        run: pnpm run \
+          --filter ${{ matrix.package }}... \
+          --filter !@onecore/utilities \
+          --filter !@onecore/types build
 
 
   test:
