--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -6,11 +6,11 @@ ENV CI=true
 
 WORKDIR /app
 
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@10.28.0 --activate
-
 # Copy package files for dependency installation
 COPY package.json tsconfig*.json pnpm-lock.yaml pnpm-workspace.yaml ./
+
+# Install pnpm using version from package.json
+RUN corepack enable && corepack prepare --activate
 
 # Copy relevant packages
 COPY libs/types ./libs/types
