--- a/services/contacts/Dockerfile
+++ b/services/contacts/Dockerfile
@@ -7,11 +7,11 @@ ENV CI=true
 
 WORKDIR /app
 
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@10.6.1 --activate
-
 # Copy package files for dependency installation
 COPY package.json tsconfig*.json pnpm-lock.yaml pnpm-workspace.yaml ./
+
+# Install pnpm using version from package.json
+RUN corepack enable && corepack prepare --activate
 
 # Copy relevant packages
 COPY libs/types ./libs/types
@@ -29,11 +29,11 @@ RUN pnpm deploy --filter @onecore/contacts --prod /out
 # ==========================
 FROM node:23-slim AS runner
 
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@10.6.1 --activate
-
 WORKDIR /app
 COPY --from=builder /out ./
+
+# Install pnpm using version from package.json
+RUN corepack enable && corepack prepare --activate
 
 ENV PORT=80
 EXPOSE 80
