--- a/services/property/Dockerfile
+++ b/services/property/Dockerfile
@@ -10,11 +10,11 @@ RUN apt-get update -y && apt-get install -y openssl
 
 WORKDIR /app
 
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@10.28.0 --activate
-
 # Copy package files for dependency installation
 COPY package.json tsconfig*.json pnpm-lock.yaml pnpm-workspace.yaml ./
+
+# Install pnpm using version from package.json
+RUN corepack enable && corepack prepare --activate
 
 # Copy relevant packages
 COPY libs/types ./libs/types
@@ -35,14 +35,14 @@ RUN cd /out && pnpm generate:static
 # ==========================
 FROM node:23-slim AS runner
 
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@10.28.0 --activate
-
 # Run on the same version of openssl as the prisma build
 RUN apt-get update -y && apt-get install -y openssl
 
 WORKDIR /app
 COPY --from=builder /out ./
+
+# Install pnpm using version from package.json
+RUN corepack enable && corepack prepare --activate
 
 EXPOSE 3000
 
