contacts: Script fixup

--- a/services/contacts/package.json
+++ b/services/contacts/package.json
@@ -30,12 +30,16 @@
   "scripts": {
     "build": "tsup",
     "dev": "NODE_ENV=production node -r dotenv/config --import tsx --watch src/index",
+    "dev:local": "NODE_ENV=production DOTENV_CONFIG_PATH=.env.local node -r dotenv/config --import tsx --watch src/index",
     "dev:init": "pnpm prepare:dotenv",
+    "dev:apply-seed": "pnpm test:create-db && ./scripts/apply-seed.sh",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "prepare:dotenv": "if not exist .env copy .env.template .env",
     "prettier": "prettier --check ./src",
-    "script:expire-listings": "ts-node src/scripts/expire-listings.ts",
+    "script:sanitize": "tsc -p tsconfig.script.json && node scripts/build/scripts/sanitize.js",
+    "script:import-seed-contact": "tsc -p tsconfig.script.json && node scripts/build/scripts/import-seed-contact.js",
+    "script:seed-source": "tsc -p tsconfig.script.json && node scripts/build/scripts/seed-source.js",
     "start": "node -r dotenv/config build/esm/index",
     "test": "pnpm test:create-db && DOTENV_CONFIG_PATH=.env.test jest --detectOpenHandles",
     "test:create-db": "./scripts/create-test-db.sh",
