--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "lint": "pnpm -r run lint",
     "lint:fix": "pnpm -r run lint:fix",
     "prettier": "pnpm -r run prettier",
-    "test": "pnpm -r run test",
-    "typecheck": "pnpm -r run typecheck"
+    "test": "pnpm -r --no-bail run test",
+    "typecheck": "pnpm -r --no-bail run typecheck"
   },
   "dependencies": {
     "@azure/msal-node": "^2.9.2"
