MIM-1147: generate inspection protocol pdf

--- a/apps/internal-portal/frontend/tsconfig.json
+++ b/apps/internal-portal/frontend/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "extends": "../../../tsconfig.react.base.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@libs/*": ["../../../libs/*"]
+    }
+  },
   "include": [
     "./src/**/*"
   ],
