--- a/core/package.json
+++ b/core/package.json
@@ -54,6 +54,7 @@
     "lodash": "^4.17.21",
     "odoo-await": "^3.4.1",
     "openapi-fetch": "^0.13.5",
+    "pdfkit": "^0.17.2",
     "pino": "^9.1.0",
     "pino-elasticsearch": "^8.0.0",
     "pino-multi-stream": "^6.0.0",
@@ -74,6 +75,7 @@
     "@types/koa__router": "12.0.4",
     "@types/ms": "^2.1.0",
     "@types/node": "^20.11.5",
+    "@types/pdfkit": "^0.17.4",
     "@types/pino-multi-stream": "^5.1.6",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
