--- a/apps/property-tree/package.json
+++ b/apps/property-tree/package.json
@@ -53,6 +53,7 @@
     "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.462.0",
     "maplibre-gl": "5.7.0",
+    "nuqs": "^2.8.6",
     "react": "^18.3.1",
     "react-day-picker": "^9.13.0",
     "react-dom": "^18.3.1",
