--- a/services/leasing/package.json
+++ b/services/leasing/package.json
@@ -48,6 +48,7 @@
     "dedent": "^1.5.1",
     "dotenv": "^16.4.5",
     "easy-soap-request": "^5.6.1",
+    "exceljs": "^4.4.0",
     "fast-xml-parser": "^4.4.0",
     "fishery": "^2.2.2",
     "http-errors": "^2.0.0",
