--- a/services/communication/package.json
+++ b/services/communication/package.json
@@ -39,7 +39,8 @@
     "tslib": "^2.7.0",
     "validator": "^13.11.0",
     "@onecore/types": "workspace:*",
-    "@onecore/utilities": "workspace:*"
+    "@onecore/utilities": "workspace:*",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "9.32.0",
