include xpand env variables in template + update readme

--- a/services/inspection/.env.template
+++ b/services/inspection/.env.template
@@ -4,5 +4,11 @@ INSPECTION_DATABASE__USER=sa
 INSPECTION_DATABASE__DATABASE=inspection
 INSPECTION_DATABASE__PORT=1438
 
+XPAND_DATABASE__PASSWORD=
+XPAND_DATABASE__HOST=
+XPAND_DATABASE__USER=
+XPAND_DATABASE__DATABASE=
+XPAND_DATABASE__PORT=
+
 ELASTICSEARCH_LOGGING_HOST=http://localhost:9208
 APPLICATION_NAME=inspection
