update inspection dockerfile

--- a/services/inspection/Dockerfile
+++ b/services/inspection/Dockerfile
@@ -20,6 +20,7 @@ COPY services/inspection ./services/inspection
 
 RUN pnpm install
 RUN pnpm build:libs
+RUN pnpm install
 RUN pnpm run --filter @onecore/inspection build
 RUN pnpm install --only=prod
 RUN pnpm deploy --filter @onecore/inspection --prod /out
