link between kundkort in property tree and keys portal

--- a/apps/keys-portal/.env.example
+++ b/apps/keys-portal/.env.example
@@ -7,3 +7,4 @@ VITE_KEYCLOAK_REALM=
 VITE_KEYCLOAK_CLIENT_ID=
 VITE_KEYCLOAK_REDIRECT_URI=
 VITE_ALLIERA_BASE_URL=https://srvmimhk21.mimerbygg.local/Alliera
+VITE_PROPERTY_TREE_URL=http://localhost:3000
