--- a/apps/property-tree/package.json
+++ b/apps/property-tree/package.json
@@ -79,6 +79,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.31.0",
+    "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-boundaries": "^5.3.1",
     "openapi-fetch": "^0.13.5",
     "openapi-typescript": "^6.7.6",
