infra: Build matrix deps in isolation, then install, then build actual package

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -135,8 +135,11 @@ jobs:
         run: |
           pnpm run \
             --filter ${{ matrix.package }}... \
+            --filter !${{ matrix.package }} \
             --filter !@onecore/utilities \
-            --filter !@onecore/types build
+            --filter !@onecore/types build && \
+          pnpm install && \
+          pnpm run --filter ${{ matrix.package }} build
 
 
   test:
