--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -109,6 +109,15 @@ jobs:
         with:
           run-generate-static: ${{ matrix.runGenerateStatic }}
 
+      - name: Build dependencies
+        run: |
+          pnpm run \
+            --filter ${{ matrix.package }}... \
+            --filter !${{ matrix.package }} \
+            --filter !@onecore/utilities \
+            --filter !@onecore/types build && \
+          pnpm install
+
       - name: Run Typecheck
         run: pnpm run --filter ${{ matrix.package }} typecheck
 
@@ -158,6 +167,15 @@ jobs:
 
       - name: Setup
         uses: ./.github/actions/pnpm-setup
+
+      - name: Build dependencies
+        run: |
+          pnpm run \
+            --filter ${{ matrix.package }}... \
+            --filter !${{ matrix.package }} \
+            --filter !@onecore/utilities \
+            --filter !@onecore/types build && \
+          pnpm install
 
       - name: Run tests
         run: pnpm run --filter "${{ matrix.package }}" test
