infra: make sure contacts build output is available to core when building

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -21,7 +21,9 @@ COPY core ./core
 RUN pnpm install
 RUN pnpm build:libs
 RUN pnpm install
-RUN pnpm run --filter @onecore/contacts --filter @onecore/core build
+RUN pnpm run --filter @onecore/contacts build
+RUN pnpm install
+RUN pnpm run --filter @onecore/core build
 RUN pnpm install --only=prod
 RUN pnpm deploy --filter @onecore/core --prod /out
 
