--- a/apps/keys-portal/package.json
+++ b/apps/keys-portal/package.json
@@ -23,11 +23,13 @@
     "prepare:dotenv": "[ -f .env ] || cp .env.local.example .env",
     "prettier": "prettier --check ./src",
     "start": "vite",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@onecore/types": "workspace:*",
     "@hookform/resolvers": "^5.2.2",
+    "@onecore/types": "workspace:*",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -102,6 +104,7 @@
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.42.0",
     "vite": "^6.3.5",
+    "vitest": "^3.0.0",
     "wait-on": "^8.0.2"
   }
 }
