first implementation of a scan endpoint in keys, works with a curl with token

--- a/core/.env.template
+++ b/core/.env.template
@@ -11,3 +11,5 @@ AUTH__KEYCLOAK__URL=https://auth-test.mimer.nu
 AUTH__KEYCLOAK__REALM=onecore-test
 AUTH__KEYCLOAK__CLIENT_ID=onecore-test
 AUTH__KEYCLOAK__CLIENT_SECRET=
+SCANNER__ALLOWED_IPS=
+SCANNER__ERROR_NOTIFICATION_EMAIL=
