--- a/apps/keys-portal/package.json
+++ b/apps/keys-portal/package.json
@@ -59,6 +59,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.62.7",
+    "@types/qrcode": "^1.5.6",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -70,6 +71,7 @@
     "lucide-react": "^0.344.0",
     "next-themes": "^0.4.6",
     "openapi-fetch": "^0.13.8",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^9.10.0",
     "react-dom": "^18.3.1",
