--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -33,12 +33,12 @@
     "@koa/router": "^12.0.1",
     "@onecore/types": "workspace:*",
     "@onecore/utilities": "workspace:*",
-    "dax-client": "workspace:*",
     "@types/easy-soap-request": "^5.6.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui": "^3.52.4",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "dax-client": "workspace:*",
     "dedent": "^1.5.1",
     "dotenv": "^16.4.5",
     "easy-soap-request": "^5.6.1",
@@ -46,6 +46,8 @@
     "fishery": "^2.2.2",
     "form-data": "^4.0.4",
     "http-errors": "^2.0.0",
+    "jimp": "^1.6.0",
+    "jsqr": "^1.4.0",
     "knex": "^3.1.0",
     "koa": "^2.16.2",
     "koa-bodyparser": "^4.4.1",
